# trend-audit-agent

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: main.py
configs/: config.json  logging.conf
docs/rfcs/: 001-architecture.md
services/: __init__.py  orchestrator.py
tests/integration/: test_pipeline.py
tests/unit/: test_core.py  test_runtime.py
