[build-system]
requires = [
  "poetry-core>=1.0.0",
  "setuptools>=67.0.0",
  "wheel>=0.42.0"
]
build-backend = "poetry.core.masonry.api"

[project]
name = "audit-agent"
version = "0.1.0"
description = "Secure distributed agent orchestration with tamper-evident execution"
authors = [
  "Security First <security@audit-agent.org>"
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS"
]
dependencies = [
  "pycryptodome>=3.10.1",
  "protobuf>=4.23.1",
  "grpcio>=1.52.0",
  "docker>=7.0.0",
  "gVisor>=2024.04.01"
]

[project.optional-dependencies]
testing = [
  "pytest>=7.3.1",
  "pytest-asyncio>=0.22.0"
]
